# use-qdrant

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/: send_task.py
worker/: __init__.py  celery_app.py
